correct styling for wrapper + moving Block UI to z-index 3 for visiblity on top of other block

--- a/src/Umbraco.Web.UI.Client/src/views/propertyeditors/blockgrid/blockgridui.less
+++ b/src/Umbraco.Web.UI.Client/src/views/propertyeditors/blockgrid/blockgridui.less
@@ -14,16 +14,6 @@
     margin-bottom:20px;
 }
 
-.umb-block-grid__wrapper {
-    position: relative;
-    max-width: 1200px;
-    /*
-    > .ui-sortable > .ui-sortable-helper > .umb-block-grid__block > umb-block-grid-block > * {
-        box-shadow: 0px 5px 10px 0 rgba(0,0,0,.2);
-    }
-    */
-}
-
 .umb-block-grid {
     position: relative;
 }
@@ -345,7 +335,7 @@ ng-form.ng-invalid > .umb-block-grid__block:not(.--active) > .umb-block-grid__bl
     */
     display: var(--umb-block-grid--block-ui-display, flex);
     opacity: 1;
-    z-index:2;
+    z-index:3;
     
     font-size: 0;
     background-color: rgba(255, 255, 255, .96);
